# garmin-lt-public

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE.txt  README.md  docker-compose.yml  email_monitor.py  gmail_client.py  main.py  pyproject.toml
monitor/: Dockerfile  gmail_client.py  monitor_service.py
web/: Dockerfile  healthcheck.py  main.py
web/templates/: admin.html  index.html  login.html
